# exotic

./: .gitignore  CMakeLists.txt  Makefile  README.md  exc  spec.md  type_error.g  type_test.g
src/: exotic  main.cpp
src/evaluvator/: evaluator.cpp  evaluator.h
src/lexer/: lexer.cpp  lexer.h  token.h
src/parser/: ast.h  parser.cpp  parser.h
src/semantics/: semantic.cpp  semantic.h  symbol_table.h  types.h
